--- a/home.css
+++ b/home.css
@@ -1,181 +1,124 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-:root{
-    --back-color:#2E818C;
-}
-body{
-    font-family: 'Roboto', sans-serif;
-}
-a{
-    color: black;
-    text-decoration: none;
-}
-.contain{
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-}
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    height: 100px;
-}
-#logo{
-    width: 150px;
-    height: 50px;
-    margin-right: 50px;
-}
-#search{
-    width: 250px;
-    height: 40px;
-    border-radius: 50px;
-    outline: none;
-    border-style: double;
-    color: rgb(158, 158, 158);
-    font-size: 18px;
-}
-header p{
-    margin-left: 30px;
-    text-transform: uppercase;
-    font-size: 18px;
-    transition: 1s;
-}
-header p:hover a{
-    color: #2E818C;
-}
-.head-img{
-    width: 50px;
-    height: 50px;
-    margin-left: 50px;
-}
-.contain ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: var(--back-color);
-    height: 70px;
-    padding-left: 40px;
-}
-.contain ul li{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 20px;
-    margin-left: 30px;
-    height: 70px;
-}
-.contain ul li:hover{
-    background-color: aliceblue;
-}
-.contain ul li img{
-    width: 40px;
-    height: 40px;
-}
+
 .container{
-   margin: 200px 100px 0px 130px;
-   display: grid;
-   grid-template-columns: auto auto auto auto;
-   grid-gap: 20px;
+    margin: 200px 100px 0px 100px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 20px;
+ }
+ .container-box{
+     height: 350px;
+     width: 250px;
+     background-color: #ffffff;
+    /* border: 1px solid rgb(163, 163, 163);*/
+ }
+ .box-img{
+     width: 250px;
+     height: 250px;
+     overflow: hidden;
+     object-fit: cover;
+ }
+ .price{
+     color: #a3a3a3;
+     text-decoration: line-through;
+     margin-left: 15px;
+ }
+ .sell-price{
+     color: #81000b;
+ }
+ .container-box >p{
+     margin: 5px 0px 0px 10px;
+ }
+ .container-box:hover{
+     box-shadow: 0px 0px 15px 10px rgb(216, 216, 216);
+ }
+ .sell-button{
+     width: 230px;
+     height: 30px;
+     text-align: center;
+     margin:10px 0px 0px 10px;
+     background-color: #2E818C;
+     border-style: hidden;
+     text-transform: uppercase;
+ }
+ .sell-button:hover{
+     background-color: #8adce7;
+ }
+@media screen and (max-width: 1024px) {
+    .container{
+        margin: 200px 0px 0px 30px;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        grid-gap: 10px;
+        width: 1024px;
+     }
+     .container-box{
+         height: 300px;
+         width: 200px;
+         background-color: #ffffff;
+        /* border: 1px solid rgb(163, 163, 163);*/
+     }
+     .box-img{
+         width: 200px;
+         height: 180px;
+         overflow: hidden;
+         object-fit: cover;
+     }
+     .sell-button{
+        width: 180px;
+        height: 30px;
+    }
 }
-.container-box{
-    height: 350px;
-    width: 250px;
-    background-color: var(--back-color);
-    border: 1px solid black;
+@media screen and (max-width: 768px) {
+    .container{
+        margin: 100px 0px 0px 10px;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        grid-gap: 10px;
+        width: 768px;
+     }
+     .container-box{
+         height: 200px;
+         width: 150px;
+         background-color: #ffffff;
+         font-size: 10px;
+        /* border: 1px solid rgb(163, 163, 163);*/
+     }
+     .box-img{
+         width: 150px;
+         height: 120px;
+         overflow: hidden;
+         object-fit: cover;
+     }
+     .sell-button{
+        width: 120px;
+        height: 20px;
+        font-size: 10px;
+    }
 }
-.box-img{
-    width: 248px;
-    height: 250px;
-    overflow: hidden;
-    object-fit: cover;
-}
-.container-box >p{
-    margin-top: 10px;
-}
-.rate{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 5px;
-}
-.rate p{
-    margin-top: 5px;
-}
-footer{
-    display: flex;
-    flex-direction: row;
-    margin-top: 30px;
-    height: 80vh;
-    border: 15px solid var(--back-color);
-}
-#footer_company{
-    width: 300px;
-    margin: 30px;
-}
-.footer_title{
-    margin: 10px 0px;
-}
-#footer_company-title{
-    padding-bottom: 20px;
-    border-bottom: 1px solid rgb(146, 146, 146);
-}
-#footer_company-info{
-    margin: 20px 0px;
-    display: flex;
-    flex-direction: column;
-}
-#footer_company-info i{
-    margin-bottom: 10px;
-}
-#footer_about{
-    width: 300px;
-    margin: 87px 0px 0px 40px;
-}
-#footer_about ul li{
-    list-style: none;
-    margin: 10px 0px;
-}
-#footer_suport{
-    width: 300px;
-    margin-top: 87px;
-}
-#footer_suport ul li{
-    list-style: none;
-    margin: 10px 0px;
-}
-#footer-care{
-    width: 300px;
-    margin-top: 87px;
-}
-#relate{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: #888888;
-    margin-bottom: 20px;
-}
-.headset-img{
-    width: 100px;
-    height: 100px;
-}
-#connect{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 25px;
-    margin: 20px 0px;
-}
-#connect i{
-    margin:0px 20px;
+@media screen and (max-width: 425px) {
+    .container{
+        margin: 100px 0px 0px 5px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-gap: 10px;
+        width: 510px;
+     }
+     .container-box{
+         height: 200px;
+         width: 150px;
+         background-color: #ffffff;
+         font-size: 10px;
+        /* border: 1px solid rgb(163, 163, 163);*/
+     }
+     .box-img{
+         width: 150px;
+         height: 120px;
+         overflow: hidden;
+         object-fit: cover;
+     }
+     .sell-button{
+        width: 120px;
+        height: 20px;
+        font-size: 10px;
+    }
 }
